# maldocanalysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-stable-py310.txt  tox.ini
src/: ExtractingPipelineFeatures.ipynb  SymbExcelExtractor.ipynb  extract_yara_batch.py  file_hashes_sha256.json
src/malwaredoc/: config.py  main.py
src/malwaredoc/data/: base.py  data.py  load.py  types.py  util.py
src/malwaredoc/extract/: features.py  metadata.py  pdf.py  pipeline.py  rar.py  rtf.py  util.py  zip.py
src/malwaredoc/extract/office/: common.py  word.py  xlsx.py
src/malwaredoc/nlp/: text_analysis.py
src/malwaredoc/nlp/code/: models.py
src/malwaredoc/nlp/embeddings/: methods.py
src/malwaredoc/nlp/ner/: cluster.py  methods.py
src/malwaredoc/nlp/translate/: methods.py  models.py
src/malwaredoc/parser/: vba.lark
src/malwaredoc/preprocess/: pipeline.py  util.py
src/malwaredoc/util/: filesystem.py
tests/resources/word/: text.docx  text_base64.docx  text_image.docx  text_ip.docx  text_link.docx  vba.docm
tests/unit/malwaredoc/extract/: test_features.py  test_metadata.py  test_office.py  test_zip.py
